# fleet_master

./: .cspell.json  .editorconfig  .travis.yml  Cargo.toml  README.md
src/: array.rs  constants.rs  error.rs  main.rs  printer.rs  test_helpers.rs
src/command/: check.rs  exec.rs  list.rs  mod.rs  packages.rs  provide.rs  search.rs  show.rs  ssh_execute_shell.rs  ssh_fetch.rs  update.rs
src/configuration/: configuration_collection.rs  configuration_file_provider.rs  configuration_provider.rs  helper.rs  mod.rs  ssh_configuration.rs
src/error/: error.rs  flat_error.rs  mod.rs
src/filter/: information_collection_filter.rs  mod.rs  package_filter.rs
src/formatter/: console_formatter.rs  factory.rs  json_formatter.rs  mod.rs
src/formatter/console_formatter/: array.rs  matrix.rs  mod.rs  table.rs
src/information/: application.rs  collection.rs  error.rs  fleet.rs  information.rs  mod.rs  packages.rs  platform.rs  system.rs
src/provider/: file_provider.rs  local_provider.rs  mod.rs  ssh_provider.rs
src/provider/ssh_provider/: mod.rs  ssh_connector.rs  ssh_uri.rs  ssh_uri_scanner.rs
src/shell/: mod.rs
src/sub_command/: check_command.rs  list_command.rs  mod.rs  packages_command.rs  provide_command.rs  search_command.rs  show_command.rs  show_packages_command.rs
tests/: configuration-test-0.1.0.json  configuration-test-0.1.0.yaml  configuration-test-0.2.0.json  configuration-test-0.2.0.yaml  packages.json  protocol-test-0.1.0.json
tests/configuration_dot_file/: README.md
tests/configuration_file/: fleet.json
