[package]
name = "fleet"
version = "0.2.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2018"

[features]
# To activate YAML support
default = ["yaml"]
yaml = ["serde_yaml"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = { version = "0.7", optional = true }
ssh2 = "0.3"
clap = "2.23"
ansi_term = "0.9"
dirs = "2.0"
