[package]
name = "fleet"
version = "0.2.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"

[features]
# To activate YAML support
default = ["yaml"]
yaml = ["serde_yaml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
ssh2 = "0.9"
clap = { version = "4.5", features = ["derive", "unicode"] }
ansi_term = "0.9"
dirs = "2.0"
comfy-table = "7.1.1"
